# Constellation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
constellation/: config.py  main.py  models.py
constellation/api/: routes.py  schemas.py
constellation/embeddings/: base.py  factory.py  ollama.py  openai.py
constellation/graph/: client.py  queries.py  schema.py
constellation/indexer/: cloner.py  collector.py  pipeline.py
constellation/parsers/: base.py  dotnet.py  java.py  javascript.py  python_parser.py  registry.py
constellation/worker/: celery_app.py  tasks.py
tests/: conftest.py  test_config.py  test_integration.py  test_models.py
tests/api/: test_routes.py  test_schemas.py
tests/embeddings/: test_base.py  test_factory.py  test_ollama_provider.py  test_openai_provider.py
tests/graph/: test_client.py  test_queries.py  test_schema.py
tests/indexer/: test_cloner.py  test_collector.py  test_pipeline.py
tests/parsers/: test_base.py  test_dotnet_parser.py  test_java_parser.py  test_javascript_parser.py  test_python_parser.py  test_registry.py
tests/parsers/fixtures/: SampleCSharp.cs  SampleCSharpEdgeCases.cs  SampleJava.java  SampleJavaEdgeCases.java  sample_javascript.tsx  sample_javascript_edge_cases.ts  sample_python.py  sample_python_edge_cases.py  syntax_error.py
tests/worker/: test_tasks.py
